--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "welcome";
 @import "home";
 @import "login";
+@import "mypage";
 @import "watchlist";
 @import "movie";
 @import "categories";
