--- a/scss/style.css
+++ b/scss/style.css
@@ -217,8 +217,8 @@ a, input, button {
   border-radius: 0;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 15% 50% 35%;
-      grid-template-columns: 15% 50% 35%;
+  -ms-grid-columns: 15% 45% 40%;
+      grid-template-columns: 15% 45% 40%;
   padding: 0.15rem 3.5rem;
 }
 
@@ -257,8 +257,8 @@ a, input, button {
       -ms-flex-pack: start;
           justify-content: flex-start;
   padding: 0 1.5rem;
-  margin-left: 10%;
   border-radius: 1.5rem;
+  margin-left: 10%;
   opacity: 0.8;
   color: #050533;
   font-family: "Rubik", sans-serif;
@@ -279,15 +279,12 @@ a, input, button {
   color: #F2F1E8;
 }
 
-.menu a {
+.menu_button {
   font-size: 1.05rem;
   font-weight: 600;
   width: 7rem;
   height: 2.5rem;
   border-radius: 2rem;
-}
-
-.menu_button {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
@@ -557,6 +554,85 @@ a, input, button {
 
 .user-box .user .hide {
   display: none;
+}
+
+.mypage {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-weight: 600;
+  padding: 1rem 3rem;
+  gap: 3rem;
+}
+
+.mypage_title {
+  text-transform: uppercase;
+}
+
+.mypage_opt {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2.5rem;
+}
+
+.mypage_display_info {
+  gap: 2rem;
+}
+
+.mypage_label {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.mypage_half {
+  gap: 1rem;
+  width: 100%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.mypage .password-input-bars {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+.mypage_submit_btns, .mypage_cancel_btns, .mypage_delacc_btns {
+  font-weight: 600;
+  background-color: transparent;
+  border-radius: 1.5rem;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+.mypage_submit_btns:hover, .mypage_cancel_btns:hover, .mypage_delacc_btns:hover {
+  color: #F2F1E8;
+}
+
+.mypage_submit_btns {
+  border: 2px solid #0D698B;
+  padding: 1rem 1.5rem;
+  color: #0D698B;
+}
+
+.mypage_submit_btns:hover {
+  background-color: #0D698B;
+}
+
+.mypage_cancel_btns {
+  border: 2px solid #E34234;
+  padding: 0.8rem 1rem;
+  color: #E34234;
+}
+
+.mypage_cancel_btns:hover {
+  background-color: #E34234;
 }
 
 .list-box {
@@ -914,6 +990,17 @@ a, input, button {
   background-color: transparent;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+}
+
+.container .review_mine .options_submit .cancel_edit_btn {
+  padding: 0.8rem 1rem;
+  margin-right: 1rem;
+  background-color: transparent;
+}
+
+.container .review_mine .options_submit .cancel_edit_btn:hover {
+  background-color: #E34234;
+  color: #F2F1E8;
 }
 
 .container .review_all {
